[package]
name = "arkv"
version = "1.0.0"
edition = "2021"
authors = ["Eric Hamiter <ehamiter@gmail.com>"]
license = "MIT"
description = "A fast, no-frills file archiving tool that copies files to remote servers via SFTP"
readme = "README.md"
homepage = "https://github.com/ehamiter/arkv"
repository = "https://github.com/ehamiter/arkv"
documentation = "https://docs.rs/arkv"
keywords = ["sftp", "archive", "backup", "file-transfer", "cli"]
categories = ["command-line-utilities", "filesystem", "network-programming"]
exclude = [
    "/target",
    "/.git",
    "/.gitignore",
]

[[bin]]
name = "arkv"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ssh2 = "0.9"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
dialoguer = "0.11"
dirs = "5.0"
walkdir = "2.5"
